--- a/CreditCardRegister/appsettings.json
+++ b/CreditCardRegister/appsettings.json
@@ -6,10 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-  "JwtSettings": {
-    "Secret": "",
-    "ExpiryMinutes": 60,
-    "Issuer": "Niraj",
-    "Audiance": "Niraj"
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=(localdb)\\mssqllocaldb;Initial Catalog=ExampleJWTAuthDB; Integrated Security=true"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTAuthenticationSecured7630b55d7c954cf493283886888427ec"
   }
 }
