migrations e mapeando controller post

--- a/CreditCardRegister/appsettings.json
+++ b/CreditCardRegister/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=(localdb)\\mssqllocaldb;Initial Catalog=ExampleJWTAuthDB; Integrated Security=true"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
